--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.job.enabled }}
+{{- if .Values.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -6,14 +6,14 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: {{ .Values.ingress.host }}
-    http:
-      paths:
-      - backend:
-         service:
-           name: {{ .Values.appName }}
-           port:
-             number: {{ .Values.ingress.port }}
-        path: /
-        pathType: Prefix
+    - host: {{ .Values.ingress.host }}
+      http:
+        paths:
+          - backend:
+              service:
+                name: {{ .Values.appName }}
+                port:
+                  number: {{ .Values.ingress.port }}
+            path: /
+            pathType: Prefix
 {{- end }}
